keep checking status

--- a/lib/web/views/run.jade
+++ b/lib/web/views/run.jade
@@ -23,6 +23,7 @@ block scripts
             window.location = '/results/'+id;
           }
         });
+        check();
       }, 5000);
     };
     check();
