--- a/lib/web/public/stylesheets/common.styl
+++ b/lib/web/public/stylesheets/common.styl
@@ -31,6 +31,14 @@ a {
   cursor: pointer;
 }
 
+p.error { 
+  background: #F2DEDE;
+  border-color: #EED3D7;
+  color: #B94A48;
+  padding: 10px;
+  border-radius: 5px;
+}
+
 #content {
   padding: 15px 5px;
 }
@@ -41,7 +49,10 @@ a {
     margin: 20px auto;
 
     textarea {
-      width: 80%;
+      width: 100%;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      padding: 5px;
       height: 100px;
       display: block;
     }
@@ -54,6 +65,11 @@ a {
 
   .header {
     margin: 0 0 20px 20px;
+  }
+
+  .re-run { 
+    float: right; 
+    margin-right: 10px;
   }
 
   .results {
