--- a/lib/web/views/layout.jade
+++ b/lib/web/views/layout.jade
@@ -1,7 +1,8 @@
 !!! 5
 html
   head
-    title CSSCoverage
+    block title
+      title CSSCoverage
     != masher.style('common')
   body
     div#header.navbar
