--- a/lib/web/public/stylesheets/common.styl
+++ b/lib/web/public/stylesheets/common.styl
@@ -46,7 +46,7 @@ p.error {
 #homepage {
   .add-urls {
     width: 90%;
-    margin: 20px auto;
+    margin: 20px 0;
 
     textarea {
       width: 100%;
@@ -55,6 +55,14 @@ p.error {
       padding: 5px;
       height: 100px;
       display: block;
+    }
+  }
+  .previous-runs {
+    li {
+      padding: 5px;
+      a {
+        padding-right: 5px;
+      }
     }
   }
 }
