layout tweek, separated out stylesheets

--- a/lib/web/public/stylesheets/common.styl
+++ b/lib/web/public/stylesheets/common.styl
@@ -3,6 +3,8 @@ warning-color = #F89406;
 error-color = #B94A48;
 
 .navbar {
+  position: fixed;
+  width: 100%;
   border-radius: 0;
   background-color: #2c2c2c;
   background-image: -moz-linear-gradient(top, #333333, #222222);
@@ -40,251 +42,7 @@ p.error {
 }
 
 #content {
-  padding: 15px 5px;
-}
-
-#homepage {
-  .add-urls {
-    width: 90%;
-    margin: 20px 0;
-
-    textarea {
-      width: 100%;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-      padding: 5px;
-      height: 100px;
-      display: block;
-    }
-  }
-  .previous-runs {
-    li {
-      padding: 5px;
-      a {
-        padding-right: 5px;
-      }
-    }
-  }
-}
-
-
-#results {
-  toc-width = 300px
-
-  .header {
-    margin: 20px 0;
-  }
-
-  .re-run { 
-    float: right; 
-    margin-right: 10px;
-  }
-
-  .results {
-    margin-left: toc-width+30;
-  }
-  .badge {
-    margin-left: 10px;
-  }
-
-  .stylesheets {
-    margin: 20px 0 0 0;
-
-    .highlight {
-      background: #f0f0f0;
-    }
-  }
-
-  h2 {
-    &:before {
-      content: "";
-      display: inline-block;
-      height: 15px;
-      width: 15px;
-      margin-right: 10px;
-    }
-  }
-  h2.success:before {
-    background-color: success-color;
-  }
-  h2.warning:before {
-    background-color: warning-color;
-  }
-  h2.error:before {
-    background-color: error-color;
-  }
-
-  table {
-    width: 500px;
-    border-collapse: collapse;
-    margin: 20px 0;
-
-    td {
-      border-bottom: 1px solid #ccc
-      padding: 5px;
-      text-align: right;
-    }
-
-    td:first-child {
-      text-align: left;
-    }
-
-    .score {
-      font-weight: bold;
-      background: #f0f0f0;
-    }
-  }
-
-  .stylesheet {
-    list-style: none;
-    margin: 20px 0;
-    padding: 20px 0;
-    border-bottom: 1px dotted #ccc;
-
-    &:first-child {
-      margin-top: 0;
-      padding-top: 0;
-    }
-
-    .header {
-
-      h2 {
-        display: inline-block;
-
-        a {
-          color: #333;
-        }
-
-      }
-    }
-    .pages  {
-      margin: 20px 0;
-
-      h4 {
-        margin: 5px 0;
-      }
-
-      & > ul {
-        margin-left: 0px;
-      }
-
-      .page {
-        list-style: none;
-        margin: 20px 0;
-        //border-left: 1px solid #ccc;
-        //padding-left: 10px;
-
-        .title {
-
-          h3 {
-            display: inline-block;
-            margin-right: 10px;
-            a {
-              color: #333;
-            }
-
-          }
-        }
-
-        &.success {
-          border-color: success-color;
-        }
-        &.warning {
-          border-color: warning-color;
-        }
-        &.error {
-          border-color: error-color;
-        }
-
-        .page-results {
-          .title {
-            border-bottom: 1px solid #ccc;
-          }
-
-          &:after {
-            content: "";
-            clear: both;
-            display: table;
-          }
-
-          .hits, .misses {
-            float: left;
-            width: 280px
-            margin-right: 50px;
-          }
-        }
-
-        .badge {
-          font-size: 10px
-        }
-
-      }
-
-      .selectors {
-        margin: 10px 0 10px 30px;
-
-        .selector {
-          font-size: 14px;
-          margin: 5px 0;
-        }
-      }
-    }
-  }
-  .toc {
-    height: 90%;
-    overflow-y: auto;
-    float: left;
-    position: fixed;
-    width: toc-width;
-    border: 1px solid #ccc;
-    border-width: 1px 1px 1px 0;
-    ul {
-      margin: 0px;
-      list-style: none;
-
-      li {
-        border-right: 2px solid #ccc;
-
-        a {
-          padding: 10px 0 10px 10px;
-          display: block;
-          color: #333;
-
-          &:hover {
-            text-decoration: none;
-          }
-        }
-
-        &:hover {
-          background: #f5f5f5;
-        }
-      }
-    }
-
-    .toc-active {
-      background: #f0f0f0;
-    }
-
-    .toc-success {
-      border-color: success-color;
-    }
-
-    .toc-warning {
-      border-color: warning-color;
-    }
-
-    .toc-error {
-      border-color: error-color;
-    }
-
-    .toc-h3 {
-      padding-left: 20px;
-      a {
-        padding: 5px 0 5px 5px;
-        font-size: 12px;
-      }
-    }
-  }
+  padding: 50px 5px 15px 5px;
 }
 
 .tooltip {
