--- a/lib/web/views/layout.jade
+++ b/lib/web/views/layout.jade
@@ -4,6 +4,7 @@ html
     block title
       title CSSCoverage
     != masher.style('common')
+    block head
   body
     div#header.navbar
       a.brand(href='/') CSSCoverage
