--- a/lib/web/views/layout.jade
+++ b/lib/web/views/layout.jade
@@ -7,6 +7,13 @@ html
     block head
   body
     div#header.navbar
+      div.colors
+        span.success
+        span.warning
+        span.error
+        span.success
+        span.warning
+        span.error
       a.brand(href='/') CSSCoverage
     div#content
       block content
