--- a/lib/web/public/stylesheets/results.styl
+++ b/lib/web/public/stylesheets/results.styl
@@ -200,14 +200,14 @@
         }
 
         &:hover {
-          background: #f5f5f5;
+          background: #f0f0f0;
         }
       }
     }
 
     .toc-active {
-      background: #f0f0f0;
       font-weight: bold;
+      background: #f0f0f0;
     }
 
     .toc-success {
@@ -222,8 +222,11 @@
       border-color: error-color;
     }
 
+    .toc-h2 {
+      border-top: 1px solid #f0f0f0;
+    }
     .toc-h4 {
-      padding-left: 30px;
+      padding-left: 40px;
       a {
         padding: 5px 0 5px 5px;
         font-size: 12px;
