--- a/lib/web/public/stylesheets/results.styl
+++ b/lib/web/public/stylesheets/results.styl
@@ -1,6 +1,6 @@
 @import "vars.styl"
 #content {
-  padding: 38px 0 0 0;
+  padding: 38px 10px 0 0;
 }
 #results {
   toc-width = 300px
@@ -8,6 +8,7 @@
   .header {
     margin: 0 0 20px 0;
     padding-top: 20px;
+
   }
 
   .re-run { 
