--- a/lib/web/public/stylesheets/homepage.styl
+++ b/lib/web/public/stylesheets/homepage.styl
@@ -6,7 +6,7 @@
     padding: 40px 570px 40px 40px;
     border-radius: 10px;
 
-    background: #f0f0f0 url(/images/csscoverage2.png) no-repeat right top;
+    background: #f0f0f0 url(/images/csscoverage2.jpg) no-repeat right top;
 
     .copy {
       font-size: 16px;
