--- a/lib/web/views/results.jade
+++ b/lib/web/views/results.jade
@@ -16,7 +16,12 @@ block content
         input.btn(type="submit", value="Rerun this test")
       div.header
         h1 Results for #{results.domain}
-        span.date Run finished #{relativeDate(results.finishedOn)}
+        p.copy This test finished #{relativeDate(results.finishedOn)}.  The overall score is #{results.stats.percentage}.  
+          if results.stats.percentage < 60
+            | It looks like you have some work to do!
+          else
+            | Nice job!
+        p.copy The results are sectioned by stylesheet files that we found.  Each section will have the pages that use the stylesheet and what selectors were used and not used.
       div.overview
         h2(class=getScoreClass(results.stats)) Overview
         p.copy CSSCoverage found #{results.stylesheetCount} stylesheet(s) across #{results.paths.length} page(s). 
@@ -39,7 +44,6 @@ block content
               td Score
               td= results.stats.percentage 
 
-      p Below is a listing of all the stylesheets found, along with what pages they were found on.  Each page is shows what selectors were used and which weren't.
       ul.stylesheets
         each stylesheet, path in results.stylesheets
           li.stylesheet
